refactor: Sonar cleanup, part 3